Incluído GetUserById, updateUser, atualizado getAllUsers, incluído configuração do Swagger.js acrescentado documentação Swagger ao user_route.js, Incluído novas tabelas (user_type tabela de reclamação suas dependentes)
